8252060: gstreamer fails to build with gcc 10

Reviewed-by: kcr